--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,29 @@
 /Neosuiter Collage Project
 /other pages
 .DS_Store
+dontupload/style18.css
+dontupload/style22.css
+dontupload/temporary.html
+dontupload/VR.html
+dontupload/xxxko.html
+dontupload/notiniuse/about copy.html
+dontupload/notiniuse/about.html
+dontupload/notiniuse/changelog.html
+dontupload/notiniuse/coco.html
+dontupload/notiniuse/collage2.html
+dontupload/notiniuse/gallery.html
+dontupload/notiniuse/help.html
+dontupload/notiniuse/help2.html
+dontupload/notiniuse/index copy.html
+dontupload/notiniuse/jazan.html
+dontupload/notiniuse/machuxsosa.html
+dontupload/notiniuse/machuxtenko.html
+dontupload/notiniuse/newplayer.html
+dontupload/notiniuse/notion.html
+dontupload/notiniuse/onlytenkos.html
+dontupload/notiniuse/other.html
+dontupload/notiniuse/script.html
+dontupload/notiniuse/vimlore
+dontupload/silly/DUMB.HTML
+dontupload/silly/OK.html
+dontupload/silly/tenko_wait.html
